# hsds-validator

./: .dockerignore  README.md  pyproject.toml  requirements.txt
.github/workflow/: ruff.yml
api/: main.py  pyproject.toml
cli/: main.py  pyproject.toml
examples/json_schema/: openapi.json  service_area.json  service_capacity.json  unit.json  url.json
lib/: error_handling.py  error_handling_classes.py  models.py  pyproject.toml  validate.py
