[project]
name = "hsds-validator"
version = "0.1.0"
description = "HSDS Validator verifying provided files comply with HSDS specification."
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "api",
    "cli",
    "lib",
]

[tool.uv.sources]
api = { workspace = true }
cli = { workspace = true }
lib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["api", "cli", "lib"]

[project.optional-dependencies]
api = ["fastapi", "uvicorn", "pydantic"]

