[project]
name = "api"
version = "0.1.0"
description = "API for HSDS Validator"
authors = [
    { name = "Stevens Blueprint", email = "blueprint@stevens.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "lib",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
