[project]
name = "cli"
version = "0.1.0"
description = "CLI for HSDS Validator"
authors = [
    { name = "Stevens Blueprint", email = "blueprint@stevens.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "lib",
]

[project.scripts]
cli = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
