[project]
name = "lib"
version = "0.1.0"
description = "HSDS Validator itself"
authors = [
    { name = "Stevens Blueprint", email = "blueprint@stevens.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[project.scripts]
lib = "lib.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
